Fix Comment Overflow

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -432,6 +432,10 @@ input:active {
     font-size: 1.5em;
     padding: 0.5em 0 0 1em;
     margin: 0.5em 0;
+    text-overflow: justify;
+    overflow-x:scroll;
+    white-space: wrap;
+    height: fit-content;
 }
 
 /* FLash */
