--- a/public/scss/_journalDetails.scss
+++ b/public/scss/_journalDetails.scss
@@ -45,6 +45,10 @@
     padding: 0.5em;
 }
 
+.social-share-container  a {
+    font-size: 1.5em;
+}
+
 .submit-comment {
     border: 2px solid var(--primary-red);
     border-radius: 12px;
@@ -179,6 +183,10 @@
 
 .comment-content {
     /* border: 2px solid var(--primary-red); */
+    text-overflow: justify;
+    overflow:scroll;
+    white-space: wrap;
+    height: fit-content;
     font-family: 'Lato';
     font-size: 1.5em;
     padding: 0.5em 0 0 1em;
